Settings: Long press to copy wifi password
Instead of marking and manually copying. Better UX

Change-Id: I2a3e2572d4d30aeb45e63d04464b228acd64203e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13645,4 +13645,8 @@
     <string name="bluetooth_connect_access_dialog_negative">Don\u2019t connect</string>
     <!-- Strings for Dialog connect button -->
     <string name="bluetooth_connect_access_dialog_positive">Connect</string>
+
+    <!-- General -->
+    <string name="copied_to_clipboard">Copied to clipboard</string>
+    <string name="longpress_to_clipboard">Long-press to copy</string>
 </resources>
